@@ -252,23 +252,23 @@ function workflow_admin_ui_get_roles() {
  * @param $form_state['values']
  */
 function workflow_admin_ui_types_save($form_values) {
-  // Empty the table so that types no longer under workflow go away.
+  // Empty the table and the variables so that types no longer under workflow go away.
+  //@todo: it is possible to switch to new workflow for node_type, leaving nodes are stuck in old workflow.
   workflow_delete_workflow_type_map_all();
 
   $node_types = node_type_get_names();
-  foreach ($node_types as $type => $name) {
-    $data = array(
-      'type' => $type,
-      'wid' => $form_values[$type]['workflow'],
-    );
+  foreach ($node_types as $node_type => $name) {
+    $wid = $form_values[$node_type]['workflow'];
+    variable_del('workflow_' . $node_type);
+    if ($wid) {
+      workflow_insert_workflow_type_map($node_type, $wid);
+      variable_set('workflow_' . $node_type, array_keys(array_filter(($form_values[$node_type]['placement']))));
 
-    workflow_insert_workflow_type_map($data);
-    variable_set('workflow_' . $type, array_keys(array_filter(($form_values[$type]['placement']))));
-
-    // If this type uses workflow, make sure pre-existing nodes are set
-    // to the workflow's creation state.
-    if ($form_values[$type]['workflow']) {
-      _workflow_node_initialize_nodes($type, $name);
+      // If this type uses workflow, make sure pre-existing nodes are set
+      // to the workflow's creation state.
+      if ($form_values[$node_type]['workflow']) {
+        _workflow_node_initialize_nodes('node', $node_type, '', $wid);
+      }
     }
   }
 }
@@ -277,10 +277,15 @@ function workflow_admin_ui_types_save($form_values) {
  * Initialize all pre-existing nodes of a type to their first state.
  * @todo: adjust _workflow_node_initialize_nodes() to handle Workflow Field.
  *
- * @param $type - node type
- * @param $name - node type name
+ * @param $node_type - node type
  */
-function _workflow_node_initialize_nodes($type, $name) {
+function _workflow_node_initialize_nodes($entity_type, $node_type, $field_name, $wid) {
+  global $user;
+
+  // ATM, only nodes are supported.
+  $entity_type = 'node';
+  $field_name = '';
+
   // Build the select query.
   // We want all published nodes of this type that don't already have a workflow state.
   $query = db_select('node', 'n');
@@ -288,35 +293,35 @@ function _workflow_node_initialize_nodes($type, $name) {
   // Add the fields.
   $query->addField('n', 'nid');
   // Add conditions.
-  $query->condition('n.type', $type);
+  $query->condition('n.type', $node_type);
   $query->condition('n.status', 1);
   $query->isNull('wn.sid');
 
   $nids = $query->execute()->fetchCol();
+
   $how_many = count($nids);
   if ($how_many == 0) {
     return;
   }
   $comment = t('Pre-existing content set to initial state.');
 
-  // Get the initial state for this content type.
-  $first_state = db_query("SELECT s.sid "
-    . "FROM {workflow_type_map} m "
-    . "INNER JOIN {workflow_states} s ON s.wid = m.wid "
-    . "WHERE m.type = :type AND s.sysid <> :creation "
-    . "ORDER BY s.weight ASC ",
-    array(':type' => $type, ':creation' => WORKFLOW_CREATION)
-    )->fetchField(0);
+  $workflow = Workflow::load($wid);
+  $creation_sid = $workflow->getCreationSid();
 
   // Load them all up.
   $nodes = node_load_multiple($nids);
-  foreach ($nodes as $node) {
-    // Force it to transition to the first state and get a history record.
-    workflow_execute_transition($node, $first_state, $comment, TRUE);
-  }
-  return;
+  foreach ($nodes as $entity) {
+    // Get the initial state for this entity.
+    // Due to permissions, it might be different for each.
+    $new_sid = $workflow->getFirstSid($entity_type, $entity);
 
-  drupal_set_message(t('!count @type nodes have been initialized.', array('@type' => $name, '!count' => $how_many)));
+    $transition = new WorkflowTransition($entity_type, $entity, $field_name, $creation_sid, $new_sid, $user->uid, REQUEST_TIME, $comment);
+
+    // Force it to transition to the first state and get a history record.
+    workflow_execute_transition($entity_type, $entity, $field_name, $transition, $force = TRUE);
+  }
+
+  drupal_set_message(t('!count @type nodes have been initialized.', array('@type' => node_type_get_name($node_type), '!count' => $how_many)));
 }
 
 /**
