@@ -67,16 +67,22 @@ function workflow_revert_workflow_history_alter(&$variables) {
 
   // Only mark the first row.
   if ($first) {
-    $first = FALSE;
     // Let's ask other modules if the reversion is allowed.
-    $node = node_load($variables['history']->nid);
-    $result = module_invoke_all('workflow', 'transition permitted', $variables['sid'], $variables['old_sid'], $node);
+    $old_sid = $variables['old_sid'];
+    $sid = $variables['sid'];
+    $id = $variables['history']->nid;
+    $entity_type = 'node'; //@todo: adapt workflow_revert_workflow_history_alter() for Entity.
+    $node = entity_load_single($entity_type, $id);
+
+    $result = module_invoke_all('workflow', 'transition permitted', $sid, $old_sid, $node, FALSE);
     // Did anybody veto this choice?
     if (!in_array(FALSE, $result)) {
       // If not vetoed, mark it.
-      $options = array('query' => array('token' => drupal_get_token('workflow_revert ' . $variables['old_sid'])));
-      $path = 'workflow_revert/' . $variables['history']->nid . '/' . $variables['old_sid'];
+      $options = array('query' => array('token' => drupal_get_token('workflow_revert ' . $old_sid)));
+      $path = 'workflow_revert/' . $id . '/' . $old_sid;
       $variables['extra'] = l('Revert state change', $path, $options);
+
+      $first = FALSE;
     }
   }
 }
