@@ -15,15 +15,15 @@ function workflow_vbo_action_info() {
       'label' => t('Change workflow state of post to next state'),
       'configurable' => FALSE,
       'triggers' => array('any'),
-      ),
+    ),
 
     'workflow_vbo_given_state_action' => array(
       'type' => 'node',
       'label' => t('Change workflow state of post to new state'),
       'configurable' => TRUE,
       'triggers' => array('any'),
-      ),
-    );
+    ),
+  );
 }
 
 /**
@@ -46,18 +46,18 @@ function workflow_vbo_next_state_action($node, array $context) {
     return;
   }
 
-  $entity_type = 'node';
+  $entity_type = 'node'; // @todo: extend workflow_vbo to support Field API.
   $entity = $node;
   $current_sid = $node->workflow;
   $current_state = WorkflowState::load($current_sid);
 
-  // Get the node's new state.
+  // Get the node's new state (which is the next available state).
   $new_sid = $current_sid;
   $options = $current_state->getOptions($entity_type, $entity);
+  $flag = FALSE;
   foreach ($options as $sid => $name) {
-    if (isset($flag)) {
+    if ($flag) {
       $new_sid = $sid;
-      $new_state_name = $name;
       break;
     }
     if ($sid == $current_sid) {
@@ -66,8 +66,11 @@ function workflow_vbo_next_state_action($node, array $context) {
   }
 
   // Fire the transition.
-  $transition = new WorkflowTransition($entity_type, $entity, $field_name = '', $current_sid, $new_sid, $user->uid, REQUEST_TIME, $comment='');
-  $new_sid = $transition->execute($force = FALSE);
+  $field_name = '';
+  $comment = '';
+  $force = FALSE;
+  $transition = new WorkflowTransition($entity_type, $entity, $field_name, $current_sid, $new_sid, $user->uid, REQUEST_TIME, $comment);
+  workflow_execute_transition($entity_type, $entity, $field_name, $transition, $force);
 }
 
 /**
@@ -81,18 +84,21 @@ function workflow_vbo_given_state_action($node, array $context) {
   }
 
   $comment = t($context['workflow_comment'], array(
-      '%title' => check_plain($node->title), 
+      '%title' => check_plain($node->title),
       '%state' => check_plain($context['state_name']),
       '%user' => theme('username', array('account' => $user)),
       ));
 
   $entity_type = 'node';
   $entity = $node;
+  $field_name = '';
   $current_sid = $node->workflow;
+  $new_sid = $context['target_sid'];
 
   // Fire the transition.
-  $transition = new WorkflowTransition($entity_type, $entity, $field_name = '', $current_sid, $new_sid = $context['target_sid'], $user->uid, REQUEST_TIME, $comment);
-  $new_sid = $transition->execute($force = $context['force']);
+  $force = $context['force'];
+  $transition = new WorkflowTransition($entity_type, $entity, $field_name, $current_sid, $new_sid, $user->uid, REQUEST_TIME, $comment);
+  workflow_execute_transition($entity_type, $entity, $field_name, $transition, $force);
 }
 
 /**
@@ -101,10 +107,9 @@ function workflow_vbo_given_state_action($node, array $context) {
  * @see workflow_vbo_given_state_action()
  */
 function workflow_vbo_given_state_action_form(array $context) {
-  $previous_workflow = '';
   $options = array();
 
-// @todo: you can choose a state from an illegal Workflow.
+  // @todo: prevent choosing a state from an illegal Workflow.
   // Get all states, only where active.
   foreach (Workflow::getWorkflows() as $workflow) {
     $options += $workflow->getOptions($grouped = TRUE);
@@ -116,15 +121,14 @@ function workflow_vbo_given_state_action_form(array $context) {
     '#description' => t('Please select the state that should be assigned when this action runs.'),
     '#default_value' => isset($context['target_sid']) ? $context['target_sid'] : '',
     '#options' => $options,
-    );
+  );
 
   $form['workflow_force'] = array(
     '#type' => 'checkbox',
     '#title' => t('Force transition'),
-    '#description' => t('If this box is checked, the new state will be assigned even if workflow ' .
-      'permissions disallow it.'),
+    '#description' => t('If this box is checked, the new state will be assigned even if workflow permissions disallow it.'),
     '#default_value' => isset($context['force']) ? $context['force'] : '',
-    );
+  );
 
   $form['workflow_comment'] = array(
     '#type' => 'textfield',
@@ -132,7 +136,7 @@ function workflow_vbo_given_state_action_form(array $context) {
     '#description' => t('This message will be written into the workflow history log when the action ' .
       'runs. You may include the following variables: %state, %title, %user'),
     '#default_value' => isset($context['workflow_history']) ? $context['workflow_history'] : t('Action set %title to %state by %user.'),
-    );
+  );
 
   return $form;
 }
@@ -151,6 +155,6 @@ function workflow_vbo_given_state_action_submit($form_id, $form_state) {
       'state_name' => check_plain($state->getName()),
       'force' => $form_state['values']['workflow_force'],
       'workflow_comment' => $form_state['values']['workflow_comment'],
-      );
+    );
   }
 }
